2008-11-20  Andy Buckley  <andy@insectnation.org>

	* Moved a lot of TrackJet and Jet code into .cc files.

	* Fixed a caching bug in Jet: cache flag resets should never be
	conditional, since they are then sensitive to initialisation
	errors.

	* Added quark enum values to ParticleName.

	* Rationalised JetAlg interfaces somewhat, with "size()" and
	"jets()" methods in the interface.

	* Added D0 W charge asymmetry and D0 inclusive jets analyses.

2008-11-18  Andy Buckley  <andy@insectnation.org>

	* Adding D0 inclusive Z pT shape analysis.

	* Added D0 Z + jet pT and photon + jet pT spectrum analyses.

	* Lots of tidying up of particle, event, particle name etc.

	* Now the first event is used to detect the beam type and remove
	incompatible analyses.

2008-11-17  Andy Buckley  <andy@insectnation.org>

	* Added bash completion for rivetgun.

	* Starting to provide stand-alone call methods on projections so
	they can be used without the caching infrastructure. This could
	also be handy for unit testing.

	* Adding functionality (sorting function and built-in sorting
	schemes) to the JetAlg interface.

2008-11-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix floating point number output format in aida2flat and flat2aida

	* Added CDF_2002_S4796047: CDF Run-I charged multiplicity distribution

	* Renamed CDF_2008_MINBIAS to CDF_2008_NOTE_9337, since the
	note is publicly available now.

2008-11-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added DELPHI_2003_WUD_03_11: Delphi 4-jet angular distributions.
	There is still a problem with the analysis, so don't use it yet.
	But I need to commit the code because my laptop is broken ...

2008-11-06  Andy Buckley  <andy@insectnation.org>

	* Code review: lots of tidying up of projections and analyses.

	* Fixes for compatibility with the LLVM C & C++ compiler.

	* Change of Particle interface to remove "get"-prefixed method
	names.

2008-11-05  Andy Buckley  <andy@insectnation.org>
