@@ -12,6 +12,7 @@ libRivetProjections_la_SOURCES = \
   FinalStateHCM.cc \
   HadronicFinalState.cc \
   Hemispheres.cc \
+  IdentifiedFinalState.cc \
   InitialQuarks.cc \
   InvMassFinalState.cc \
   JetShape.cc \
